Added rotation and contrast trace operations.